--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,33 @@ header {
   width: 100%;
   height: 60px;
   background: $white;
-  padding: 7px 15px;
   box-shadow: 0 2px 6px -3px rgba(0, 0, 0, 0.15);
   position: relative;
+}
+.headerInfo {
+  max-width: 1280px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+.logoArea {
+  width: 200px;
+  height: 50px;
+}
+.rightHeaderInfo {
+  display: flex;
+}
+
+.nav-primary {
+}
+.nav-list {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+
+  .nav-item {
+    padding: 8px 20px;
+  }
 }
